# musical-waffle

./: Cargo.toml  README.md
front-end/: index.html  package-lock.json  vite.config.js
front-end/src/: App.jsx  Login.jsx
sql/: tables.sql
src/: database.rs  dataobj.rs  main.rs  routes.rs
